--- a/texture_pack.conf
+++ b/texture_pack.conf
@@ -1,4 +1,4 @@
 description = A 128px texture pack created with Blender3D.
 author = Lokrates
-title = Polygonia
-name = polygonia
+title = Polygonia_128px
+name = polygonia_128px
